------------
mtPaint NEWS
------------

Here is a summary of the main changes in this release (see handbook for full details):

3.41	2013-??-??
	* Background layer position now can be changed via Ctrl+arrows or layers window spinbuttons, like any other layer
	* Undo system now uses a bit less memory
	* New image format PMM (Portable MultiMap) added for interoperable storage and exchange of images : See handbook section A.2 for details
	* XPM files with 65-92 colours are now saved with smaller size
	* Support for compiling with giflib 5 added
	* BUGFIX - Geometry info on the status bar now correctly updates after arrow keys or Escape key
	* BUGFIX - New image creation from system clipboard now respects "Undoable" toggle
	* BUGFIX - Problem with layers list in inactive dock tab sometimes not updating is now eliminated
	* BUGFIX - All keyboard shortcuts now work in Image View mode, as they should
	* BUGFIX - PAM files with type BLACKANDWHITE are no longer loaded as grayscale
	* BUGFIX - Animation cycling now doesn't skip over the last frame of a GIF loaded into layers
	* BUGFIX - Background layer is now made large enough to accommodate all frames when loading animation into layers
	* BUGFIX - Command line switches beyond the first one are now parsed properly

3.40	2011-12-30

	* Tagalog translation added by Anjelo delCarmen
	* Hungarian translation added by Ur Balazs
	* Czech translation updated by Roman Hornik
	* German translation updated by B. Clausius
	* Italian translation updated by Angelo Gemmi
	* Japanese translation updated by Norihiro YONEDA
	* Swedish translation updated by Daniel Eriksson
	* Spanish translation updated by Adolfo Jayme
	* Brazilian Portuguese translation updated by Valter Nazianzeno
	* Chinese (Simplified) translation updated by Cecc
	* Russian translation updated
	* Eliminated flicker when positioning line, polygon side, or gradient in Windows version
	* Scrolling made more smooth in Windows version